--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
         <title>Андрей Волобуев.html</title>
     </head>
     <body>
-        <h1>&lt;h1&gt;Првиет, я Андрей.&lt;/br&gt;&lt;/h1&gt;<br></h1>
+        <h1>&lt;h1&gt;Првиет, я Андрей&lt;/br&gt;&lt;/h1&gt;<br></h1>
 
         &lt;img src="<img src="face.png" align="top">" align="top"&gt;
         <p>&lt;p&gt;Я умею писать программы на разных языках программирования: C, Pyhton, Go, Brainfuck и даже чуть-чуть на HTML.&lt;/p&gt;</p>
         <p>&lt;p&gt;Так же владею навыками уверенного пользователя ПК: Windows XP, MS Word, Excel, PowerPoint, Outlook.&lt;/br&gt;<br>
         Печатаю текст со скоростьб 220 символов/мин. (это быстро).&lt;/br&gt;<br>
-        Несколько написанных мной компьютерных прогнграмм доступны по данномуу адрессу в международной компьютерной сети интернет: <a href="https://github.com/andreyvolobuev">https://github.com/andreyvolobuev</a>&lt;/br&gt;<br>
-        &lt;/p&gt;</p>
+        Несколько написанных мной компьютерных прогнграмм доступны по данномуу адрессу в международной компьютерной сети интернет: 
+        <a href="https://github.com/andreyvolobuev">https://github.com/andreyvolobuev</a>&lt;/p&gt;</p>
+        <p>Я много путешествую и специально для таких же как я создал веб-страничку: <a href="https://aerolist.ru/">http://aerolist.ru/</a>&lt;/br&gt;</p>
+        <p>Вы можете познакомиться со мной поближе в социальной сети <a href="https://instagram.com/volobuev1">InstaGram</a> <font color="red">(пренаджелит Meta и заплренещена в России)&lt;/br&gt;</font></p>
         <p>Предложения о сотрудничестве присылайте на мой E-Mail: <a href="mailto:andrey@andreyvolobuev.ru">andrey@andreyvolobuev.ru</a>&lt;/br&gt;</p>
         <p>Донаты в биткоинах можно присылать на этот кошелек: &lt;b&gt;<b>12r3GowCsyxSmC47kahLdYu9SDhSWLUiEh</b>&lt;/b&gt;</p>
+        <p><font size="6"><b>&lt;/bodi&gt; &lt;/html&gt;</b></font></p>
     </body>
 </html>
